2004-02-16  Emmanuel Beffara  <manu@beffara.org>

	* doc/...: Documentation updates.

	* src/cmdline.py, src/cmd_pipe.py: Added options "-e" and "-z".

	* src/__init__.py, src/modules/...: Bugfix for cleaning.

	* src/modules/gz.py: Added module "gz" for gzipping the document.

2004-02-14  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/multibib.py: Added hooks for local \bibliography and
	\bibliographystyle.

	* src/__init__.py: Added a hook for \endinput.

	* src/modules/expand.py: Added some option processing in source
	expansion.

2004-02-11  Emmanuel Beffara  <manu@beffara.org>

	* doc/...: Documentation updates.

	* configure, setup.py, rubber.spec.in, debian/rules: Added
	installation of the info documentation.

	* src/modules/expand.py: Don't expand local classes by default.

	* src/util.py, src/graphics/__init__.py: Made the rules for graphics
	conversion safer.

	* src/__init__.py, src/cmdline.py, src/cmd_info.py: Let the classes
	derive from "object".

2004-01-24  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/bibtex.py, src/modules/multibib.sty: Added support for
	package "multibib", patching the bibtex module in the process.

	* src/cmdline.py: Added the installation directory in "--version".

	* src/util.py: Added function simplify_path.

	* src/__init__.py, src/cmdline.py: Added an argument to env.command to
	indicate the position of directives in the sources.

2004-01-21  Emmanuel Beffara  <manu@beffara.org>

	* src/modules/pdftex.py, src/modules/graphics.py: Added support for
	DVI generation by pdfTeX.

2004-01-20  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Added a hook for \end{document}.

	* man/..., doc/..., setup.py, MANIFEST.in: Moved man pages into new
	directory doc. Introduced Texinfo documentation.

2004-01-17  Emmanuel Beffara  <manu@beffara.org>

	* src/cmdline.py, src/cmd_pipe.py, man/...: Added the command-line
	option "--texpath".

	* src/__init__.py, src/modules/expand.py: Fixed how 'expand' modifies